--- a/webserver/nginx/default.conf
+++ b/webserver/nginx/default.conf
@@ -1,11 +1,11 @@
 # App server config for register SSL (Certbot)
 server {
   listen      80;
-  server_name .battery2567.click;
+  server_name .battery-dev.info;
 
   # Allow only for register SSL (Certbot)
   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
   # Redirect to HTTPS
-  location / { return 301 https://battery2567.click$request_uri; }
+  location / { return 301 https://battery-dev.info$request_uri; }
 }
