--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,7 +15,7 @@ services:
       - static:/usr/share/nginx/html
       - ./frontend/build:/usr/share/nginx/html/
       - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./webserver/nginx/battery2567.click.conf:/etc/nginx/sites-enabled/battery2567.click.conf # change battery2567.click (!)
+      - ./webserver/nginx/battery-dev.info.conf:/etc/nginx/sites-enabled/battery-dev.info.conf # change battery-dev.info (!)
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
