--- a/webserver/nginx/site.com.conf
+++ b/webserver/nginx/site.com.conf
@@ -1,11 +1,11 @@
 # Redirect to non-WWW
 server {
   listen      443 ssl http2;
-  server_name www.battery2567.click;
+  server_name www.battery-dev.info;
 
   # SSL
-  ssl_certificate     /etc/letsencrypt/live/battery2567.click/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/battery2567.click/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/battery-dev.info/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/battery-dev.info/privkey.pem;
 
   # Additional Nginx options
   include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -14,21 +14,21 @@ server {
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   # Redirect to HTTPS
-  location / { return 301 https://battery2567.click$request_uri; }
+  location / { return 301 https://battery-dev.info$request_uri; }
 }
 
 # Config for HTTPS
 server {
   listen      443 ssl http2;
-  server_name battery2567.click;
+  server_name battery-dev.info;
 
   # Root & index.html
   root /usr/share/nginx/html;
   index index.html;
 
   # SSL
-  ssl_certificate     /etc/letsencrypt/live/battery2567.click/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/battery2567.click/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/battery-dev.info/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/battery-dev.info/privkey.pem;
 
   # Additional Nginx options
   include /etc/letsencrypt/options-ssl-nginx.conf;
